<resources>
    <string name="app_name">NYTimesSearch</string>
    <string name="action_filter">Filter</string>
    <string name="hint">Enter search Query</string>
    <string name="search">Search</string>
    <string name="title_activity_article">ArticleActivity</string>

    <!-- Filter Fragment -->
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort order</string>
    <string name="new_desk_values">New Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashion"><![CDATA[Fashion&Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>
    <string name="connection_error">Connection error</string>
    <string name="request_error">Too many requests</string>


</resources>
