<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.m3libea.nytimessearch.fragments.FilterFragment"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/begin_date" />

    <TextView
        android:id="@+id/tvDate"
        tools:text="9/19/2017"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/sort_order"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort"
        android:layout_marginBottom="@dimen/dp20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:text="@string/new_desk_values"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10">
        <CheckBox android:id="@+id/checkbox_arts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arts" />
        <CheckBox android:id="@+id/checkbox_fashion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fashion" />
        <CheckBox android:id="@+id/checkbox_sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/save"
        android:text="@string/save"
        android:textColor="@color/colorText"/>


</LinearLayout>
